# mod_discord

./: .gitignore  .gitmodules  CMakeLists.txt  Configure_VS2019.bat  README.md
Projects/: CMakeLists.txt
Projects/DPP-dev/: CMakeLists.txt
Projects/DPP/include/dpp-10.0/dpp/: appcommand.h  application.h  auditlog.h  automod.h  ban.h  cache.h  channel.h  cluster.h  collector.h  commandhandler.h  discordclient.h  discordevents.h  discordvoiceclient.h  dispatcher.h  dns.h  dpp.h  dtemplate.h  emoji.h  entitlement.h  etf.h  event.h  event_router.h  exception.h  export.h  guild.h  httpsclient.h  integration.h  invite.h  json.h  json_fwd.h  json_interface.h  managed.h  message.h  misc-enum.h  once.h  permissions.h  presence.h  prune.h  queues.h  restrequest.h  (+17 more)
Projects/DPP/include/dpp-10.0/dpp/coro/: async.h  coroutine.h  job.h  task.h
Projects/mod_discord/: CMakeLists.txt  Main.cpp
